sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value getvalueCount
  var v=getvalueCount()-2
        ^